--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
     "name": "Oneflix",
-    "version": "1.0",
-    "description": "Only allows you to watch one netflix episode at a time",
+    "version": "1.1",
+    "description": "Only allows you to watch one Netflix or Disney+ episode at a time",
     "icons": {
         "48": "icons/icon48.png",
         "96": "icons/icon96.png",
@@ -23,5 +23,5 @@
     "background": {
         "service_worker": "background.js"
     },
-    "permissions": ["tabs"]
+    "permissions": []
 }
