--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
     "name": "Oneflix",
-    "version": "1.6",
-    "description": "Prevents binging by allowing you to limit the number of Netflix or Disney+ episodes you can watch at a time.",
+    "version": "1.7",
+    "description": "Prevents binging by allowing you to limit the number of Netflix, Disney+ or BBC iPlayer episodes you can watch at a time.",
     "icons": {
         "48": "icons/icon48.png",
         "96": "icons/icon96.png",
